--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/gamer.css">
     <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
-    <title>Gamer Landing Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Work+Sans:wght@400;500;600;700&display=swap"
+        rel="stylesheet">
+        <link rel="stylesheet" href="styles/gamer.css">
+    <title>Gaming Landing Page Design</title>
 </head>
+
 <body>
     <!-- Header section starts -->
     <header>
+        <nav>
+            <div class="logo section-title"><span class="text-color-red">G</span>amer</div>
+            <div class="nav-list">
+                <ul>
+                    <li><a href="">About US</a></li>
+                    <li><a href="">Developer</a></li>
+                    <li class="follow-us"><a href="">Follow Us On</a></li>
+                </ul>
+            </div>
+        </nav>
 
     </header>
     <!-- Header section Ends -->
@@ -24,4 +41,5 @@
     </footer>
     <!-- Footer Section Ends -->
 </body>
+
 </html>
