--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Work+Sans:wght@400;500;600;700&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="styles/gamer.css">
-        <script src="https://kit.fontawesome.com/6f916284f0.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles/gamer.css">
+    <script src="https://kit.fontawesome.com/6f916284f0.js" crossorigin="anonymous"></script>
     <title>Gaming Landing Page Design</title>
 </head>
 
@@ -19,21 +19,50 @@
     <!-- Header section starts -->
     <header>
         <nav>
-            <div class="logo section-title"><img src="images/Frame.png" alt=""> <span class="text-color-red">G</span>amer</div>
+            <div class="logo section-title"><img src="images/Frame.png" alt=""> <span
+                    class="text-color-red">G</span>amer</div>
             <div class="nav-list">
                 <ul>
                     <li><a href="">About US</a></li>
                     <li><a href="">Developer</a></li>
-                    <li class="follow-us"><a href=""> Follow Us On <i class="fa-brands fa-youtube" style="color: #e70d0d;"></i> <i class="fa-brands fa-tiktok"></i> </li>
+                    <li class="follow-us"><a href=""> Follow Us On <i class="fa-brands fa-youtube"
+                                style="color: #e70d0d;"></i> <i class="fa-brands fa-tiktok"></i> </a></li>
                 </ul>
             </div>
         </nav>
+        <div class="banner">
+            <div class="banner-container">
+                <div class="banner-container-col-1">
+                    <h3 class="banner-title">Play Like The</h3>
+                    <h2 class="banner-goat">G.O.A.T.</h2>
+                    <p class="banner-description">1-Click instant play</p>
+                    <p class="banner-description">No Download</p>
+                    <p class="banner-description">1000s of supported online games</p>
+                </div>
+                <div class="banner-container-col-2"></div>
+            </div>
+        </div>
 
     </header>
     <!-- Header section Ends -->
     <!-- Main section Starts -->
     <main>
-
+        <!-- Banner section start -->
+        <!-- <section class="banner-section">
+            <div class="banner-container">
+                <div class="banner-column-1">
+                    <h3 class="section-title">Play Like The</h3>
+                    <div class="banener-description">
+                        <p>1-Click instant play</p>
+                        <p>No Download</p>
+                        <p>1000s of supported online games</p>
+                    </div>
+                    <button class="btn-primary">Sign In</button>
+                    <button class="btn-primary go-rogue">Go Rogue</button>
+                </div>
+            </div>
+        </section> -->
+        <!-- Banner section Ends -->
     </main>
     <!-- Main Section Ends -->
     <!-- Footer Section Starts -->
