--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <p class="banner-description">No Download</p>
                     <p class="banner-description">1000s of supported online games</p>
                 </div>
-                <div class="banner-container-col-2"></div>
+                <div class="banner-container-col-2"><img src="images/Group 18.png" alt=""></div>
             </div>
         </div>
 
