banner section done

--- a/index.html
+++ b/index.html
@@ -35,9 +35,15 @@
                 <div class="banner-container-col-1">
                     <h3 class="banner-title">Play Like The</h3>
                     <h2 class="banner-goat">G.O.A.T.</h2>
-                    <p class="banner-description">1-Click instant play</p>
-                    <p class="banner-description">No Download</p>
-                    <p class="banner-description">1000s of supported online games</p>
+                    <div class="banner-descripton-container">
+                        <p class="banner-description">1-Click instant play</p>
+                        <p class="banner-description">No Download</p>
+                        <p class="banner-description">1000s of supported online games</p>
+                        <div class="btn">
+                            <button class="btn-primary">Sign In</button>
+                            <button class="btn-primary go-rougue">Go Rogue</button>
+                        </div>
+                    </div>
                 </div>
                 <div class="banner-container-col-2"><img src="images/Group 18.png" alt=""></div>
             </div>
