online games complete without bonus section

--- a/index.html
+++ b/index.html
@@ -53,22 +53,30 @@
     <!-- Header section Ends -->
     <!-- Main section Starts -->
     <main>
-        <!-- Banner section start -->
-        <!-- <section class="banner-section">
-            <div class="banner-container">
-                <div class="banner-column-1">
-                    <h3 class="section-title">Play Like The</h3>
-                    <div class="banener-description">
-                        <p>1-Click instant play</p>
-                        <p>No Download</p>
-                        <p>1000s of supported online games</p>
+        <section class="online-games">
+            <div class="online-games-container">
+                <h3 class="section-title">Online Games <span class="funny">Funny Videos</span></h3>
+                <p class="section-description online-games-description">A Collection of Hilarious Videos to Brighten Your Day</p>
+                <div class="card-container">
+                    <div class="cards">
+                        <img src="images/Rectangle 4.png" alt="" class="card-image">
+                        <p class="section-description">No Download. No Installs. Play games Instantly on Gamer.</p>
                     </div>
-                    <button class="btn-primary">Sign In</button>
-                    <button class="btn-primary go-rogue">Go Rogue</button>
+                    <div class="cards">
+                        <img src="images/Rectangle 5.png" alt="" class="card-image">
+                        <p class="section-description">Did you score? #unblockedgames #school</p>
+                    </div>
+                    <div class="cards">
+                        <img src="images/Rectangle 6.png" alt="" class="card-image">
+                        <p class="section-description">Breaking game records like OG</p>
+                    </div>
+                    <div class="cards">
+                        <img src="images/Rectangle 7.png" alt="" class="card-image">
+                        <p class="section-description">Busted gaming on school laptop, but you are still lit.</p>
+                    </div>
                 </div>
             </div>
-        </section> -->
-        <!-- Banner section Ends -->
+        </section>
     </main>
     <!-- Main Section Ends -->
     <!-- Footer Section Starts -->
