play games complete

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         <section class="online-games">
             <div class="online-games-container">
                 <h3 class="section-title">Online Games <span class="funny">Funny Videos</span></h3>
-                <p class="section-description online-games-description">A Collection of Hilarious Videos to Brighten Your Day</p>
+                <p class="section-description online-games-description">A Collection of Hilarious Videos to Brighten
+                    Your Day</p>
                 <div class="card-container">
                     <div class="cards">
                         <img src="images/Rectangle 4.png" alt="" class="card-image">
@@ -76,6 +77,23 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section class="play-games">
+            <div class="play-games-container">
+                <div class="play-games-col-1">
+                    <img src="images/Rectangle 67.png" class="pic-1" alt="">
+                    <img src="images/Rectangle 78.png" class="pic-2" alt="">
+                </div>
+                <div class="play-games-col-2">
+                    <div>
+                        <h3 class="section-title"><span class="funny">Play Games <br> Online</span> Anywhere, <br> Anytime!</h3>
+                        <p class="section-description">PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you
+                            can play your favorite games online for free, any time, anywhere , on any device.</p>
+                    </div>
+                </div>
+            </div>
+
         </section>
     </main>
     <!-- Main Section Ends -->
