--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                 </div>
                 <div class="play-games-col-2">
                     <div>
-                        <h3 class="section-title"><span class="funny">Play Games <br> Online</span> Anywhere, <br> Anytime!</h3>
+                        <h3 class="section-title"><span class="funny">Play Games <br> Online</span> Anywhere, <br>
+                            Anytime!</h3>
                         <p class="section-description">PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you
                             can play your favorite games online for free, any time, anywhere , on any device.</p>
                     </div>
