--- a/index.html
+++ b/index.html
@@ -99,7 +99,13 @@
     </main>
     <!-- Main Section Ends -->
     <!-- Footer Section Starts -->
-    <footer>
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="logo section-title"><img src="images/Frame.png" alt=""> <span
+                    class="text-color-red">G</span>amer
+            </div>
+            
+        </div>
 
     </footer>
     <!-- Footer Section Ends -->
