footer section created

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <!-- Header section starts -->
     <header>
         <nav>
-            <div class="logo section-title"><img src="images/Frame.png" alt=""> <span
-                    class="text-color-red">G</span>amer</div>
+            <div class="logo section-title"><img src="images/Frame.png" alt="">
+                    <span class="text-color-red">&nbsp;&nbsp;G</span>amer
+            </div>
             <div class="nav-list">
                 <ul>
                     <li><a href="">About US</a></li>
@@ -101,10 +102,36 @@
     <!-- Footer Section Starts -->
     <footer class="footer">
         <div class="footer-container">
-            <div class="logo section-title"><img src="images/Frame.png" alt=""> <span
-                    class="text-color-red">G</span>amer
+            <div class="section-title logo"><img src="images/Frame.png" alt="">
+                <span class="text-color-red">&nbsp;&nbsp;G</span><span class="amer">amer</span>
             </div>
-            
+            <div class="optoin-class section-description">
+                <option value="">Our Story</option>
+                <option value="">Games</option>
+                <option value="">Web Games</option>
+                <option value="">Careers</option>
+                <option value="">Support</option>
+                <option value="">My Account</option>
+            </div>
+            <div class="btn">
+                <button class="twiter"><i class="fa-brands fa-twitter" style="color: #455bb5;"></i></button>
+                <button class="facebook"><i class="fa-brands fa-facebook" style="color: #4a3f9d;"></i></button>
+                <button class="youtube"><i class="fa-brands fa-youtube" style="color: #e31c72;"></i></button>
+                <button class="linkdin"><i class="fa-brands fa-linkedin-in" style="color: #1c22d4;"></i></button>
+                <button class="instagram"><i class="fa-brands fa-square-instagram"></i></button>
+                <button class="apple"><i class="fa-brands fa-apple" style="color: #2330e1;"></i></button>
+            </div>
+            <div class="footer-description">
+                <div class="upper-part">
+                    <p>Terms and Conditions</p>
+                    <p>Privacy Policy</p>
+                    <p>Cookie Policy</p>
+                    <p>Privacy Settings</p>
+                </div>
+                <div class="copy-right-section">
+                    <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+                </div>
+            </div>
         </div>
 
     </footer>
