--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
             </div>
             <div class="footer-description">
                 <div class="upper-part">
-                    <p>Terms and Conditions</p>
-                    <p>Privacy Policy</p>
-                    <p>Cookie Policy</p>
-                    <p>Privacy Settings</p>
+                    <p class="footer-last">Terms and Conditions</p>
+                    <p class="footer-last">Privacy Policy</p>
+                    <p class="footer-last">Cookie Policy</p>
+                    <p class="footer-last">Privacy Settings</p>
                 </div>
                 <div class="copy-right-section">
                     <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
