--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <nav>
             <div class="logo section-title"><img src="images/Frame.png" alt="">
-                    <span class="text-color-red">&nbsp;&nbsp;G</span>amer
+                    <span class="text-color-red">&nbsp;G</span>amer
             </div>
             <div class="nav-list">
                 <ul>
@@ -40,10 +40,10 @@
                         <p class="banner-description">1-Click instant play</p>
                         <p class="banner-description">No Download</p>
                         <p class="banner-description">1000s of supported online games</p>
-                        <div class="btn">
-                            <button class="btn-primary">Sign In</button>
-                            <button class="btn-primary go-rougue">Go Rogue</button>
-                        </div>
+                    </div>
+                    <div class="btn-banner">
+                        <button class="btn-primary">Sign In</button>
+                        <button class="btn-primary go-rougue">Go Rogue</button>
                     </div>
                 </div>
                 <div class="banner-container-col-2"><img src="images/Group 18.png" alt=""></div>
@@ -103,7 +103,7 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="section-title logo"><img src="images/Frame.png" alt="">
-                <span class="text-color-red">&nbsp;&nbsp;G</span><span class="amer">amer</span>
+                <span class="text-color-red">&nbsp;G</span><span class="amer">amer</span>
             </div>
             <div class="optoin-class section-description">
                 <option value="">Our Story</option>
