icon button addess

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <nav>
             <div class="logo section-title"><img src="images/Frame.png" alt="">
-                    <span class="text-color-red">&nbsp;G</span>amer
+                <span class="text-color-red">&nbsp;G</span>amer
             </div>
             <div class="nav-list">
                 <ul>
@@ -96,6 +96,64 @@
                 </div>
             </div>
 
+        </section>
+        <section class="icon-button">
+            <div class="icon-button-container">
+                <div class="icon-and-text">
+                    <div class="icon-text-flex">
+                        <img src="images/Rectangle 11.png" alt="">
+                        <p>Action Games</p>
+                    </div>
+                </div>
+                <div class="icon-and-text">
+                    <div class="icon-text-flex">
+                        <img src="images/Rectangle 12.png" alt="">
+                        <p>Adventure Games</p>
+                    </div>
+                </div>
+                <div class="icon-and-text">
+                    <div class="icon-text-flex">
+                        <img src="images/Rectangle 13.png" alt="">
+                        <p>Arcade Games</p>
+                    </div>
+                </div>
+                <div class="icon-and-text">
+                    <div class="icon-text-flex">
+                        <img src="images/Rectangle 14.png" alt="">
+                        <p>Educational Games</p>
+                    </div>
+                </div>
+                <div class="icon-and-text">
+                    <div class="icon-text-flex">
+                        <img src="images/Rectangle 15.png" alt="">
+                        <p>Word Games</p>
+                    </div>
+                </div>
+                <div class="icon-and-text">
+                    <div class="icon-text-flex grid-item-6">
+                        <img src="images/Rectangle 16.png" alt="">
+                        <p>Role Palying Games</p>
+                    </div>
+                </div>
+                <div class="icon-and-text">
+                    <div class="icon-text-flex">
+                        <img src="images/Rectangle 17.png" alt="">
+                        <p>Music & Audio Games</p>
+                    </div>
+                </div>
+                <div class="icon-and-text">
+                    <div class="icon-text-flex">
+                        <img src="images/Rectangle 18.png" alt="">
+                        <p>Puzzle Games</p>
+                    </div>
+                </div>
+                <div class="icon-and-text">
+                    <div class="icon-text-flex">
+                    <img src="images/Rectangle 19.png" alt="">
+                    <p>Strategy Games</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <!-- Main Section Ends -->
