hover effect on icon

--- a/index.html
+++ b/index.html
@@ -99,58 +99,58 @@
         </section>
         <section class="icon-button">
             <div class="icon-button-container">
-                <div class="icon-and-text">
+                <div class="icon-and-text grid-item-1">
                     <div class="icon-text-flex">
                         <img src="images/Rectangle 11.png" alt="">
-                        <p>Action Games</p>
+                        <p class="section-description">Action Games</p>
                     </div>
                 </div>
                 <div class="icon-and-text">
                     <div class="icon-text-flex">
                         <img src="images/Rectangle 12.png" alt="">
-                        <p>Adventure Games</p>
+                        <p class="section-description">Adventure Games</p>
                     </div>
                 </div>
                 <div class="icon-and-text">
                     <div class="icon-text-flex">
                         <img src="images/Rectangle 13.png" alt="">
-                        <p>Arcade Games</p>
+                        <p class="section-description">Arcade Games</p>
                     </div>
                 </div>
                 <div class="icon-and-text">
                     <div class="icon-text-flex">
                         <img src="images/Rectangle 14.png" alt="">
-                        <p>Educational Games</p>
+                        <p class="section-description">Educational Games</p>
                     </div>
                 </div>
                 <div class="icon-and-text">
                     <div class="icon-text-flex">
                         <img src="images/Rectangle 15.png" alt="">
-                        <p>Word Games</p>
+                        <p class="section-description">Word Games</p>
                     </div>
                 </div>
-                <div class="icon-and-text">
+                <div class="icon-and-text position-icon grid-item-6">
                     <div class="icon-text-flex grid-item-6">
                         <img src="images/Rectangle 16.png" alt="">
-                        <p>Role Palying Games</p>
+                        <p class="section-description">Role Palying Games</p>
                     </div>
                 </div>
-                <div class="icon-and-text">
+                <div class="icon-and-text position-icon">
                     <div class="icon-text-flex">
                         <img src="images/Rectangle 17.png" alt="">
-                        <p>Music & Audio Games</p>
+                        <p class="section-description">Music & Audio Games</p>
                     </div>
                 </div>
-                <div class="icon-and-text">
+                <div class="icon-and-text position-icon">
                     <div class="icon-text-flex">
                         <img src="images/Rectangle 18.png" alt="">
-                        <p>Puzzle Games</p>
+                        <p class="section-description">Puzzle Games</p>
                     </div>
                 </div>
-                <div class="icon-and-text">
+                <div class="icon-and-text position-icon">
                     <div class="icon-text-flex">
                     <img src="images/Rectangle 19.png" alt="">
-                    <p>Strategy Games</p>
+                    <p class="section-description">Strategy Games</p>
                     </div>
                 </div>
             </div>
