icon fully responsive

--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
         </section>
         <section class="icon-button">
             <div class="icon-button-container">
-                <div class="icon-and-text grid-item-1">
+
+                <div class="icon-and-text">
                     <div class="icon-text-flex">
                         <img src="images/Rectangle 11.png" alt="">
                         <p class="section-description">Action Games</p>
@@ -129,30 +130,35 @@
                         <p class="section-description">Word Games</p>
                     </div>
                 </div>
-                <div class="icon-and-text position-icon grid-item-6">
+
+
+
+                <div class="icon-and-text grid-item-6">
                     <div class="icon-text-flex grid-item-6">
                         <img src="images/Rectangle 16.png" alt="">
                         <p class="section-description">Role Palying Games</p>
                     </div>
                 </div>
-                <div class="icon-and-text position-icon">
+                <div class="icon-and-text">
                     <div class="icon-text-flex">
                         <img src="images/Rectangle 17.png" alt="">
                         <p class="section-description">Music & Audio Games</p>
                     </div>
                 </div>
-                <div class="icon-and-text position-icon">
+                <div class="icon-and-text">
                     <div class="icon-text-flex">
                         <img src="images/Rectangle 18.png" alt="">
                         <p class="section-description">Puzzle Games</p>
                     </div>
                 </div>
-                <div class="icon-and-text position-icon">
+                <div class="icon-and-text">
                     <div class="icon-text-flex">
-                    <img src="images/Rectangle 19.png" alt="">
-                    <p class="section-description">Strategy Games</p>
+                        <img src="images/Rectangle 19.png" alt="">
+                        <p class="section-description">Strategy Games</p>
                     </div>
                 </div>
+
+
             </div>
         </section>
     </main>
