--- a/index.html
+++ b/index.html
@@ -61,20 +61,46 @@
                     Your Day</p>
                 <div class="card-container">
                     <div class="cards">
-                        <img src="images/Rectangle 4.png" alt="" class="card-image">
+                        <div class="image-container">
+                            <img src="images/Rectangle 4.png" alt="Image Description">
+                            <div class="overlay">
+                                <span class="play-button">&#9658;</span>
+                                <span class="section-description watch-now">Watch Now</span>
+                            </div>
+                        </div>
                         <p class="section-description">No Download. No Installs. Play games Instantly on Gamer.</p>
                     </div>
                     <div class="cards">
-                        <img src="images/Rectangle 5.png" alt="" class="card-image">
-                        <p class="section-description">Did you score? #unblockedgames #school</p>
-                    </div>
-                    <div class="cards">
-                        <img src="images/Rectangle 6.png" alt="" class="card-image">
-                        <p class="section-description">Breaking game records like OG</p>
-                    </div>
-                    <div class="cards">
-                        <img src="images/Rectangle 7.png" alt="" class="card-image">
+                        <div class="image-container">
+                            <img src="images/Rectangle 5.png" alt="Image Description">
+                            <div class="overlay">
+                                <span class="play-button">&#9658;</span>
+                                <span class="section-description watch-now">Watch Now</span>
+                            </div>
+                        </div>
                         <p class="section-description">Busted gaming on school laptop, but you are still lit.</p>
+                    </div>
+                    <div class="cards">
+                        <div class="image-container">
+                            <img src="images/Rectangle 6.png" alt="Image Description">
+                            <div class="overlay">
+                                <span class="play-button">&#9658;</span>
+                                <span class="section-description watch-now">Watch Now</span>
+                            </div>
+                        </div>
+                        <p class="section-description">Busted gaming on school laptop, but you are still lit.</p>
+                    </div>
+                    <div class="cards">
+                        <div class="image-container">
+                            <img src="images/Rectangle 7.png" alt="Image Description">
+                            <div class="overlay">
+                                <span class="play-button">&#9658;</span>
+                                <span class="section-description watch-now">Watch Now</span>
+                            </div>
+                        </div>
+                        <p class="section-description">Busted gaming on school laptop, but you are still lit.</p>
+                        <!-- <img src="images/Rectangle 7.png" alt="" class="card-image">
+                        <p class="section-description">Busted gaming on school laptop, but you are still lit.</p> -->
                     </div>
                 </div>
             </div>
@@ -131,10 +157,8 @@
                     </div>
                 </div>
 
-
-
-                <div class="icon-and-text grid-item-6">
-                    <div class="icon-text-flex grid-item-6">
+                <div class="icon-and-text">
+                    <div class="icon-text-flex">
                         <img src="images/Rectangle 16.png" alt="">
                         <p class="section-description">Role Palying Games</p>
                     </div>
@@ -157,8 +181,6 @@
                         <p class="section-description">Strategy Games</p>
                     </div>
                 </div>
-
-
             </div>
         </section>
     </main>
