--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                 <span class="section-description watch-now">Watch Now</span>
                             </div>
                         </div>
-                        <p class="section-description">Busted gaming on school laptop, but you are still lit.</p>
+                        <p class="section-description">Did you score? #unblockedgames #school</p>
                     </div>
                     <div class="cards">
                         <div class="image-container">
@@ -88,7 +88,7 @@
                                 <span class="section-description watch-now">Watch Now</span>
                             </div>
                         </div>
-                        <p class="section-description">Busted gaming on school laptop, but you are still lit.</p>
+                        <p class="section-description">Breaking game records like OG</p>
                     </div>
                     <div class="cards">
                         <div class="image-container">
@@ -99,8 +99,6 @@
                             </div>
                         </div>
                         <p class="section-description">Busted gaming on school laptop, but you are still lit.</p>
-                        <!-- <img src="images/Rectangle 7.png" alt="" class="card-image">
-                        <p class="section-description">Busted gaming on school laptop, but you are still lit.</p> -->
                     </div>
                 </div>
             </div>
